# markast

./: .gitignore  LICENSE  README.md  _build.py  _content.py  index.html  pyproject.toml
assets/: main.css  main.js
docs/: 01_getting_started.md  02_ast_reference.md  03_widgets.md  04_transforms.md  05_renderers.md  06_walker.md  07_client_integration.md  08_extending.md  README.md
en/: ast-reference.html  client-integration.html  extending.html  getting-started.html  index.html  renderers.html  transforms.html  walker.html  widgets.html
es/: ast-reference.html  client-integration.html  extending.html  getting-started.html  index.html  renderers.html  transforms.html  walker.html  widgets.html
examples/: api_backend.py  basic_parse.py  custom_widget.py  render_html.py  transform_pipeline.py
markast/: __init__.py  __main__.py  __version__.py  cli.py  config.py  document.py  exceptions.py  parser_api.py
markast/ast/: __init__.py  factory.py  schema.py  types.py  utils.py  walker.py
markast/parser/: __init__.py  builder.py  inline.py  props.py  tokenizer.py
markast/render/: __init__.py  html.py  markdown.py
markast/rules/: __init__.py  base.py  builtin.py  codes.py
markast/transforms/: __init__.py  base.py  linkify.py  normalize.py  slugify.py  toc.py  typography.py
markast/widgets/: __init__.py  base.py  registry.py
markast/widgets/builtin/: __init__.py  admonition.py  badge.py  card.py  code_collapse.py  code_group.py  steps.py  tabs.py  video.py
tests/: conftest.py  test_parse_blocks.py  test_parse_inline.py  test_render_html.py  test_render_markdown.py  test_roundtrip.py  test_rules.py  test_transforms.py  test_walker.py  test_widgets.py
